Api/.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: %SERVICE_NAME%
  namespace: %KUBERNETES_NAMESPACE%
spec:
  ports:
    - port: 80
  selector:
    app: %SERVICE_NAME%
  type: ClusterIP
